# wechat-sdk-rust

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  client.rs  common.rs  lib.rs  template_message.rs
