[package]
name = "wechat-sdk-rust"
version = "0.1.0"
authors = ["renhongdi <ryan.hd.ren@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.9", default-features = false, features = ["rustls"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
chrono = {version = "0.4", features=["serde"]}
time = "0.1"